--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
   pointer-events: none;
 }
 
+.logo {
+  width: 90%;
+  height: 100%;
+
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
